feat(create space): add create space route
