# docs/swagger.json
@@ -210,6 +210,52 @@
                 }
             }
         },
+        "/spaces": {
+            "post": {
+                "description": "Create a new Space with the given details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Spaces"
+                ],
+                "summary": "Create a new Space",
+                "parameters": [
+                    {
+                        "description": "Space details",
+                        "name": "Space",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateSpaceRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateSpaceResponseForSwagger"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.GenericErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.GenericErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/tags": {
             "post": {
                 "description": "Create a new tag with the given details",
@@ -304,6 +350,41 @@
         }
     },
     "definitions": {
+        "models.CreateSpaceRequest": {
+            "type": "object",
+            "required": [
+                "createdAt",
+                "modifiedAt",
+                "name"
+            ],
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "modifiedAt": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateSpaceResponseForSwagger": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Success message"
+                },
+                "result": {
+                    "$ref": "#/definitions/models.Space"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "Success"
+                }
+            }
+        },
         "models.CreateTagRequest": {
             "type": "object",
             "required": [
@@ -602,6 +683,11 @@
         },
         "models.Space": {
             "type": "object",
+            "required": [
+                "createdAt",
+                "modifiedAt",
+                "name"
+            ],
             "properties": {
                 "createdAt": {
                     "type": "string"
@@ -615,17 +701,8 @@
                 "name": {
                     "type": "string"
                 },
-                "repetitiveTasks": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.RepetitiveTaskTemplate"
-                    }
-                },
-                "tasks": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Task"
-                    }
+                "userId": {
+                    "type": "string"
                 }
             }
         },
