# models/space.go
@@ -8,11 +8,22 @@ import (
 )
 
 type Space struct {
-	ID              uuid.UUID                `gorm:"type:uuid;default:gen_random_uuid();primaryKey" json:"id"`
-	Name            string                   `gorm:"unique;not null" json:"name"`
-	Tasks           []Task                   `json:"tasks"`
-	RepetitiveTasks []RepetitiveTaskTemplate `json:"repetitiveTasks"`
-	CreatedAt       time.Time                `gorm:"autoCreateTime" json:"createdAt"`
-	ModifiedAt      time.Time                `gorm:"autoUpdateTime" json:"modifiedAt"`
-	DeletedAt       gorm.DeletedAt           `gorm:"index" json:"-"`
+	ID         uuid.UUID      `gorm:"type:uuid;default:gen_random_uuid();primaryKey" json:"id"`
+	Name       string         `json:"name" binding:"required"`
+	CreatedAt  time.Time      `json:"createdAt" binding:"required"`
+	ModifiedAt time.Time      `json:"modifiedAt" binding:"required"`
+	DeletedAt  gorm.DeletedAt `gorm:"index" json:"-"`
+	UserID     uuid.UUID      `gorm:"type:uuid;index" json:"userId"`
+}
+
+type CreateSpaceRequest struct {
+	Name       string    `json:"name" binding:"required"`
+	CreatedAt  time.Time `json:"createdAt" binding:"required"`
+	ModifiedAt time.Time `json:"modifiedAt" binding:"required"`
+}
+
+// Create Space success response for swagger doc
+type CreateSpaceResponseForSwagger struct {
+	Result Space `json:"result"`
+	SuccessResult
 }
